--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 cron-descriptor==1.4.3
-Django==5.0.4
+Django
 django-celery-beat==2.6.0
 django-celery-results==2.5.1
 django-timezone-field==6.1.0
